cambios del pull de por la tarde

--- a/1-Ramp Up/1-Python/4-Funciones/RESU_Ejercicios funciones.ipynb
+++ b/1-Ramp Up/1-Python/4-Funciones/RESU_Ejercicios funciones.ipynb
@@ -406,7 +406,15 @@
    "metadata": {},
    "source": [
     "## Ejercicio 8\n",
-    "Escribe un probrama que calcule la [serie de Fibonacci](https://es.wikipedia.org/wiki/Sucesi%C3%B3n_de_Fibonacci)"
+    "## Ejercicio 8\n",
+    "Escribe un programa que obtenga el enésimo número de la [serie de Fibonacci](https://es.wikipedia.org/wiki/Sucesi%C3%B3n_de_Fibonacci). Tienes que crear una función recursiva con un único argumento.\n",
+    "\n",
+    "```Python\n",
+    "fibonacci(2) = 1\n",
+    "fibonacci(4) = 3\n",
+    "fibonacci(5) = 5\n",
+    "fibonacci(8) = 21\n",
+    "```"
    ]
   },
   {
@@ -430,6 +438,37 @@
     "    return (fibonacci(n - 1) + (fibonacci(n - 2)))\n",
     "\n",
     "print(fibonacci(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0\n",
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solucion de Antonio\n",
+    "fibo = [0,1]\n",
+    "\n",
+    "print(fibo[-1], fibo[-2])\n",
+    "\n",
+    "def ej8(fibo):\n",
+    "\n",
+    "    while len(fibo) < 13:\n",
+    "\n",
+    "        fibo.append(fibo[-1] + fibo[-2])\n",
+    "    \n",
+    "    return fibo\n",
+    "    \n",
+    "print(ej8(fibo))"
    ]
   },
   {
