--- a/1-Ramp Up/2-Matemáticas para Data Science/Ejercicio Monty Hall.ipynb
+++ b/1-Ramp Up/2-Matemáticas para Data Science/Ejercicio Monty Hall.ipynb
@@ -15,81 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Has ganado 66 veces\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Para elegir una puerta aleatoriamente utiliza el siguiente codigo\n",
     "# Escoge aleatoriamente un numero del 1 al 3, ambos incluidos.\n",
     "import numpy as np\n",
-    "\n",
-    "def abrir_puerta_cabra(puerta_correcta, eleccion):\n",
-    "    puertas = range(1,4)\n",
-    "    cabra = [p for p in puertas if p not in [puerta_correcta, eleccion]]\n",
-    "    \n",
-    "    return cabra[0]\n",
-    "\n",
-    "def abrir_puerta(puerta_correcta, eleccion):\n",
-    "    return eleccion == puerta_correcta\n",
-    "\n",
-    "def cambiar_puerta(eleccion, puerta_cabra):\n",
-    "    puertas = range(1,4)\n",
-    "    cabra = [p for p in puertas if p not in [puerta_cabra, eleccion]]\n",
-    "    \n",
-    "    return cabra[0]\n",
-    "\n",
-    "def monty_hall(ganar):\n",
-    "    puerta = np.random.randint(1,4)\n",
-    "    #print('Bienvenido, concursante. Elige una puerta')\n",
-    "    #eleccion = int(input())\n",
-    "    eleccion = np.random.randint(1,4)\n",
-    "    #print('Okey, ahora abro yo una puerta')\n",
-    "    puerta_cabra = abrir_puerta_cabra(puerta, eleccion)\n",
-    "    #print(f'Te abro la puerta {puerta_cabra}')\n",
-    "    #print('Quieres cambiar de puerta?(y/n)')\n",
-    "\n",
-    "    #cambio_eleccion = input()\n",
-    "    if ganar:\n",
-    "        cambio_eleccion = 'y'\n",
-    "    else:\n",
-    "        cambio_eleccion = 'no, porque no se estadistica'\n",
-    "    #print(f'Puerta elegida: {eleccion}, puerta_correcta: {puerta},\\\n",
-    "    #puerta_cabra: {puerta_cabra}')\n",
-    "    if cambio_eleccion in ['y', 'Y', 'S', 's']:\n",
-    "        #print('Okey, pues cambiamos de puerta y abrimos')\n",
-    "        eleccion = cambiar_puerta(eleccion, puerta_cabra)\n",
-    "        ganador = abrir_puerta(puerta, eleccion)\n",
-    "        #print(f'Puerta elegida: {eleccion}, puerta_correcta: {puerta},\\\n",
-    "    #puerta_cabra: {puerta_cabra}')\n",
-    "    else:\n",
-    "        #print('Okey, pues abrimos')\n",
-    "        ganador = abrir_puerta(puerta, eleccion)\n",
-    "        #print(f'Puerta elegida: {decision}, puerta_correcta: {puerta},\\\n",
-    "    #puerta_cabra: {puerta_cabra}')\n",
-    "\n",
-    "    if ganador:\n",
-    "        #print('Has ganado!!')\n",
-    "        pass\n",
-    "    else:\n",
-    "        pass\n",
-    "        #print('Has perdido!')\n",
-    "    return ganador\n",
-    "\n",
-    "acum = 0\n",
-    "for i in range(100):\n",
-    "    resultado = monty_hall(ganar = True)\n",
-    "    if resultado:\n",
-    "        acum+=1\n",
-    "print(f'Has ganado {acum} veces')\n",
-    "    "
+    "puerta = np.random.randint(1,4)"
    ]
   }
  ],
