--- a/1-Ramp Up/2-Matemáticas para Data Science/Ejercicios Algebra.ipynb
+++ b/1-Ramp Up/2-Matemáticas para Data Science/Ejercicios Algebra.ipynb
@@ -36,25 +36,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[33. 12.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([33., 12.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "C1 = np.array([[1,1],\n",
-    "               [1,-1]])\n",
-    "C2 = np.array([45,21])\n",
+    "'''\n",
+    "x + y = 45\n",
+    "x - y = 21\n",
+    "'''\n",
     "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x)"
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, 1],\n",
+    "              [1, -1]])\n",
+    "\n",
+    "b = np.array([45, 21])\n",
+    "\n",
+    "x = np.linalg.solve(A, b)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  1],\n",
+       "       [ 1, -1]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
    ]
   },
   {
@@ -67,27 +98,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "93\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([9., 3.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# a + b = 12\n",
-    "# 3a -b = 0\n",
+    "'''\n",
+    "            x + y = 12\n",
+    "x = 3y ---> x - 3y = 0\n",
+    "'''\n",
+    "A = np.array([[1, 1],\n",
+    "              [1, -3]])\n",
     "\n",
-    "C1 = np.array([[1,1], [3,-1]])\n",
-    "C2 = np.array([12,0])\n",
+    "b = np.array([12, 0])\n",
     "\n",
-    "x = sorted(np.linalg.solve(C1,C2), reverse=True)\n",
-    "tmp2 = f'{int(x[0])}{int(x[1])}'\n",
-    "print(tmp2)"
+    "x = np.linalg.solve(A, b)\n",
+    "x\n"
    ]
   },
   {
@@ -100,36 +136,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10. 35.]\n",
-      "[40. 65.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([10., 35.])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# -a + b = 25\n",
-    "# b + 15 = 2*(a+15) -> -2a + b = 15\n",
+    "'''\n",
+    "x + 25 = y   --->       x - y = -25\n",
+    "2*(x + 15) = y + 15    2x = y - 15\n",
+    "x - y = -25\n",
+    "2x - y = -15\n",
     "\n",
-    "C1 = np.array([[-1,1], [-2,1]])\n",
-    "C2 = np.array([25,15])\n",
+    "'''\n",
+    "A = np.array([[1, -1],\n",
+    "              [2, -1]])\n",
     "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x)\n",
+    "b = np.array([-25, -15])\n",
     "\n",
-    "# suponiendo que son 15 anios desde la edad actual\n",
-    "# - a + b = 25\n",
-    "#  2a -b = 15\n",
-    "C1 = np.array([[-1,1], [2,-1]])\n",
-    "C2 = np.array([25,15])\n",
-    "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x)"
+    "x = np.linalg.solve(A, b)\n",
+    "x\n"
    ]
   },
   {
@@ -142,27 +177,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3. 6. 2.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([2., 6., 3.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# a + b + c = 11\n",
-    "# a + c = 5\n",
-    "# b - 3c = 0\n",
+    "'''\n",
+    "x + y + z = 11    x + y + z = 11\n",
+    "x + z = 5         x +     z = 5\n",
+    "y = 2z                y - 2z = 0\n",
+    "'''\n",
     "\n",
-    "C1 = np.array([[1,1,1], [1,0,1], [0,1,-3]])\n",
-    "C2 = np.array([11,5,0])\n",
     "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x) # sol 2 6 3"
+    "A = np.array([[1, 1, 1],\n",
+    "              [1, 0, 1],\n",
+    "              [0, 1, -2]])\n",
+    "\n",
+    "b = np.array([11, 5, 0])\n",
+    "\n",
+    "x = np.linalg.solve(A, b)\n",
+    "x"
    ]
   },
   {
@@ -176,59 +220,48 @@
     "|----|----|----|\n",
     "|Alumnas|62,5%|87,5%|\n",
     "|Alumnos|80%|60%|\n",
-    "|Total|26|26|"
+    "|Total|26|26|\n",
+    "\n",
+    "¿Cuántos alumnos y alumnas hay?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[16. 20.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([16., 20.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# .625a + .80b = 26\n",
-    "# .875a + .60b = 26\n",
+    "'''\n",
+    "0.625x + 0.8y = 26\n",
+    "0.875x + 0.6y = 26\n",
+    "'''\n",
     "\n",
-    "C1 = np.array([[.625,.8], [.875,.60]])\n",
-    "C2 = np.array([26,26])\n",
+    "A = np.array([[0.625, 0.8],\n",
+    "              [0.875, 0.6]])\n",
     "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x)\n",
+    "b = np.array([26, 26])\n",
     "\n",
-    "\n",
-    "# Cuantos chicos y chicas hay en la clase\n",
-    "\n",
-    "\n",
-    "x = np.linalg.solve(C1,C2)\n",
-    "print(x)"
+    "x = np.linalg.solve(A, b)\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1.,2.2,3.6]\n",
-    "\n",
-    "b = list(map(lambda x : int(x), a))\n",
-    "print(b)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -247,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
