--- a/1-Ramp Up/2-Matemáticas para Data Science/Algebra_Lineal.ipynb
+++ b/1-Ramp Up/2-Matemáticas para Data Science/Algebra_Lineal.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -146,11 +146,13 @@
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1.])"
+       "array([ 1.,  1.,  1.])"
       ]
      },
-     "execution_count": 1,
-     "metadata": {},
+     "execution_count": 2,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -182,8 +184,10 @@
        "array([1, 3, 5])"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
+     "execution_count": 3,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -244,10 +248,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "2bm2pN4m_lZ1",
-    "jupyter": {
-     "source_hidden": true
-    }
+    "id": "2bm2pN4m_lZ1"
    },
    "outputs": [],
    "source": [
@@ -1659,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1674,12 +1675,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.],\n",
-       "       [11.]])"
+       "array([[  1.],\n",
+       "       [ 11.]])"
       ]
      },
-     "execution_count": 7,
-     "metadata": {},
+     "execution_count": 38,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -4363,7 +4366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
