cambios aniadidos con pull de clase

--- a/1-Ramp Up/2-Matemáticas para Data Science/Ejercicio Monty Hall.ipynb
+++ b/1-Ramp Up/2-Matemáticas para Data Science/Ejercicio Monty Hall.ipynb
@@ -24,6 +24,65 @@
     "import numpy as np\n",
     "puerta = np.random.randint(1,4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero_de_repeticiones = 100000\n",
+    "lista =[]\n",
+    "for i in range(numero_de_repeticiones):\n",
+    "    lista.append(jugar(cambiar=False))\n",
+    "    \n",
+    "#print(lista)\n",
+    "print(\"El concursante gana en\", lista.count(True),\"ocasiones\")\n",
+    "print(\"El concursante pierde en\",lista.count(False),\"ocasiones\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero_de_repeticiones = 100000\n",
+    "lista =[]\n",
+    "for i in range(numero_de_repeticiones):\n",
+    "    lista.append(jugar(cambiar=True))\n",
+    "    \n",
+    "#print(lista)\n",
+    "print(\"El concursante gana en\", lista.count(True),\"ocasiones\")\n",
+    "print(\"El concursante pierde en\",lista.count(False),\"ocasiones\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Montad 3 puertas (1, 2, 3). Sabemos cual es coche y cual es cabra\n",
+    "\n",
+    "# Elegid ALEATORIAMENTE\n",
+    "\n",
+    "# Descartad una cabra.\n",
+    "    # Si cambio: elijo la puerta que me queda (no es la descartada, ni la elegida en p. lugar)\n",
+    "    # Si no cambio de puerta: (continuo con la puerta elegida en p.lugar)\n",
+    "\n",
+    "# Compruebo si he acertado. Devuelve un booleano (True -> Gano, False -> Pierdo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puerta_ganadora = np.random.randint(1,4)\n",
+    "puerta_elegida = np.random.randint(1,4)"
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
