--- a/1-Ramp Up/1-Python/6-Modulos/Modulos.ipynb
+++ b/1-Ramp Up/1-Python/6-Modulos/Modulos.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting primer_script.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file primer_script.py\n",
+    "\n",
+    "\n",
+    "a = 1\n",
+    "b=2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -110,45 +131,12 @@
       "NAME\n",
       "    primer_script\n",
       "\n",
-      "DESCRIPTION\n",
-      "    Example of a python module. Contains a variable called my_variable,\n",
-      "    a function called my_function, and a class called MyClass.\n",
-      "\n",
-      "CLASSES\n",
-      "    builtins.object\n",
-      "        MyClass\n",
-      "    \n",
-      "    class MyClass(builtins.object)\n",
-      "     |  Example class.\n",
-      "     |  \n",
-      "     |  Methods defined here:\n",
-      "     |  \n",
-      "     |  __init__(self)\n",
-      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      "     |  \n",
-      "     |  get_variable(self)\n",
-      "     |  \n",
-      "     |  set_variable(self, new_value)\n",
-      "     |      Set self.variable to a new value\n",
-      "     |  \n",
-      "     |  ----------------------------------------------------------------------\n",
-      "     |  Data descriptors defined here:\n",
-      "     |  \n",
-      "     |  __dict__\n",
-      "     |      dictionary for instance variables (if defined)\n",
-      "     |  \n",
-      "     |  __weakref__\n",
-      "     |      list of weak references to the object (if defined)\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    my_function()\n",
-      "        Example function\n",
-      "\n",
       "DATA\n",
-      "    my_variable = 0\n",
+      "    a = 100\n",
+      "    b = 200\n",
       "\n",
       "FILE\n",
-      "    c:\\users\\daney\\desktop\\the bridge\\thebridge\\0_ramp_up\\semana_4\\dia_1\\primer_script.py\n",
+      "    c:\\users\\daney\\desktop\\archivos\\bootcamps\\prof_datasciencebootcamps\\thebridgedsftsep20\\1-ramp up\\1-python\\6-modulos\\primer_script.py\n",
       "\n",
       "\n"
      ]
@@ -170,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +166,7 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "<function my_function at 0x000001C4EA2D44C8>\n",
+      "<function my_function at 0x000001AD7E4B6820>\n",
       "<class 'primer_script.MyClass'>\n"
      ]
     }
@@ -331,19 +319,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n"
+      "0\n",
+      "0\n"
      ]
     }
    ],
+   "source": [
+    "import ejer_prueba\n",
+    "ejer_prueba.b = 0\n",
+    "print(ejer_prueba.b)\n",
+    "\n",
+    "import ejer_prueba\n",
+    "print(ejer_prueba.b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_var = ejer_prueba.b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,16 +365,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_variable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-6de718b72082>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mmy_variable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmy_function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'my_variable' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del my_variable, my_function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +400,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -469,13 +497,58 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from direc_segundo.segundo_script import c, d\n",
+    "print(c)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from direc_segundo.segundo_script import *\n",
+    "print(c)\n",
+    "print(d)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "En estos casos resulta muy útil ponerle un alias al `import`. Esto nos ayudará a acortar el nombre y a poner uno más intuitivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import direc_segundo.segundo_script\n",
+    "\n",
+    "print(direc_segundo.segundo_script.c)\n",
+    "print(direc_segundo.segundo_script.d)"
    ]
   },
   {
@@ -508,14 +581,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\Daney\\\\Desktop\\\\The Bridge\\\\thebridge\\\\0_Ramp_Up\\\\semana_4\\\\dia_1',\n",
-       " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\python37.zip',\n",
+       "['C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\prof_datasciencebootcamps\\\\thebridgedsftsep20\\\\1-Ramp Up\\\\1-Python\\\\6-Modulos',\n",
+       " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\python38.zip',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\DLLs',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\lib',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3',\n",
@@ -528,7 +601,7 @@
        " 'C:\\\\Users\\\\Daney\\\\.ipython']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,14 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\Daney\\\\Desktop\\\\The Bridge\\\\thebridge\\\\0_Ramp_Up\\\\semana_4\\\\dia_1',\n",
-       " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\python37.zip',\n",
+       "['C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\prof_datasciencebootcamps\\\\thebridgedsftsep20\\\\1-Ramp Up\\\\1-Python\\\\6-Modulos',\n",
+       " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\python38.zip',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\DLLs',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\lib',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3',\n",
@@ -596,37 +669,38 @@
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\lib\\\\site-packages\\\\Pythonwin',\n",
        " 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
        " 'C:\\\\Users\\\\Daney\\\\.ipython',\n",
-       " 'C:/Users/Daney/Desktop/direc_tercero']"
+       " 'C:/Users/Daney/PycharmProjects/Clas21020']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sys.path.append('C:/Users/Daney/Desktop/direc_tercero')\n",
+    "sys.path.append('C:/Users/Daney/PycharmProjects/Clas21020')\n",
+    "sys.path.append('C:\\\\Users\\\\Daney\\\\PycharmProjects\\\\Clas21020')\n",
     "sys.path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "6\n"
+      "100\n",
+      "200\n"
      ]
     }
    ],
    "source": [
-    "import tercer_script as ts\n",
-    "print(ts.e)\n",
-    "print(ts.f)"
+    "import segundo as seg\n",
+    "print(seg.a)\n",
+    "print(seg.b)"
    ]
   },
   {
@@ -955,7 +1029,12 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2206,11 +2285,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wget\n",
+      "  Downloading wget-3.2.zip (10 kB)\n",
+      "Building wheels for collected packages: wget\n",
+      "  Building wheel for wget (setup.py): started\n",
+      "  Building wheel for wget (setup.py): finished with status 'done'\n",
+      "  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9686 sha256=c35154359ebf163cc8d1bffd4f684ce8e830063ea544ec6a431da2052ffe4f44\n",
+      "  Stored in directory: c:\\users\\daney\\appdata\\local\\pip\\cache\\wheels\\bd\\a8\\c3\\3cf2c14a1837a4e04bd98631724e81f33f462d86a1d895fae0\n",
+      "Successfully built wget\n",
+      "Installing collected packages: wget\n",
+      "Successfully installed wget-3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install wget"
    ]
   },
   {
@@ -2234,16 +2339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'razorback.mp3'"
+       "'razorback (1).mp3'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
